--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "PostgreSQL": "User ID=postgres;Password=ifrn.cn;Host=localhost;Port=5432;Database=UniversidadeDB;"
   },
+  "Jwt":{
+    "Key": "eliezionaotomabanho"
+  },
+  "TokenConfiguration":{
+    "Audience":"IFRN_Alunos",
+    "Issuer": "Ladyla",
+    "ExpireHours": 2
+  },
+
 
   "Logging": {
     "LogLevel": {
