--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "PostgreSQL": "User ID=postgres;Password=ifrn.cn;Host=localhost;Port=5432;Database=UniversidadeDB;"
   },
   "Jwt":{
-    "Key": "eliezionaotomabanho"
+    "Key": "eliezionaotomabanhooooooooooooooooooooooooooooooooooooo"
   },
   "TokenConfiguration":{
     "Audience":"IFRN_Alunos",
